# docker-builder

./: .gitignore  Dockerfile  dist.Dockerfile  example.sh  exec.sh  flake.nix  pyproject.toml
docker_builder/: __init__.py  __main__.py
docker_builder/examples/: __init__.py  basic.Dockerfile
tests/: example.Dockerfile  local_explicit_dependencies.Dockerfile  local_implicit_dependencies.Dockerfile  test_docker.py
tests/local_dependencies/alternative_root/local_dependencies/: A
