[project]
name = "docker_builder"
version = "0.0.1"
description = "tooling to build modify and share Dockerfiles used for testing fictures"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "docker"
]


[project.optional-dependencies]
test = [
    "pytest >= 5.0",
]

[build-system]
requires = ["setuptools >= 40.6.0", "cython"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[testenv]
deps = pytest
commands = pytest -s {posargs}
"""

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
